# hts-wrapper

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  compile-notes.txt
cmake/: FindHtslib.cmake
include/: .#read-pair.h  .#streams.hpp  .#utils.hpp  CMakeLists.txt  aligned-insertion.hpp  alignment-matrix.h  bam-header.h  bam-iterator.h  faidx-cpp.h  insertion.h  sam-file.h  sam-iterator.h  streams.hpp
include/hts-wrapper/: CMakeLists.txt  aligned-insertion.h  alignment-matrix.h  bam-record.h  bam.h  cigar.h  faidx-cpp.h  hts-wrapper-util.h  read-pair.h  sam-iterator.h  snp.h  utils.hpp
source/: CMakeLists.txt  bam-header.cpp  bam-record.cpp  cigar.cpp  faidx-cpp.cpp  sam-file.cpp
tests/: CMakeLists.txt  fasta-test.cpp  make-numt.cpp  read-paired-end.cpp  test-alignment.cpp  test-compression-reading.cpp  test.cpp
tests/data/: test.numt.fasta  test1.fasta
