target_include_directories(hts-wrapper
   PUBLIC
   "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
   "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
   )


set_target_properties(hts-wrapper PROPERTIES PUBLIC_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/faidx-cpp.h")
#install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/faidx-cpp.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${CMAKE_PROJECT_NAME})
#install(TARGETS hts-wrapper
#   INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
#   PUBLIC_HEADERS DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
#   )

